--- a/app/manifest.json
+++ b/app/manifest.json
@@ -18,5 +18,10 @@
     "tabs",
     "http://*/*",
     "https://*/*"
-  ]
+  ],
+  "browser_action": {
+      "default_icon": "images/icon-128.png",
+      "default_popup": "popup.html",
+      "default_title": "Post to Linkastor"
+   }
 }
