--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "__MSG_appName__",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "manifest_version": 2,
     "description": "__MSG_appDescription__",
     "icons": {
@@ -33,7 +33,8 @@
     "externally_connectable": {
         "matches": [
             "*://linkastor.com/*",
-            "*://linkastor.com/*",
+            "*://www.linkastor.com/*",
+            "*://linkastor.herokuapp.com/*",
             "http://localhost/*"
         ]
     }
